--- a/css/style.css
+++ b/css/style.css
@@ -130,3 +130,31 @@ body {
   color: #fff;
   text-align: center;
 }
+
+.sortable {
+  cursor: pointer;
+  position: relative;
+  padding-right: 20px;
+}
+
+.sortable::after {
+  content: '▲▼';
+  font-size: 12px;
+  position: absolute;
+  right: 5px;
+  top: 50%;
+  transform: translateY(-50%);
+  opacity: 0.5;
+  transition: transform 0.3s ease;
+  visibility: hidden;
+}
+
+.sortable.asc::after {
+  content: '▲';
+  visibility: visible;
+}
+
+.sortable.desc::after {
+  content: '▼';
+  visibility: visible;
+}
